# libsilly

./: README.md  silly.c  silly.h
test/: CMakeLists.txt  CodeCoverage.cmake  make_test_cover.sh  test_silly.cpp  uncrustify.cfg.txt
